update to more recent React

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@ src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     <script
 src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js">
     </script>
-    <script src="./shared/thirdparty/es5-shim.min.js"></script>
-    <script src="./shared/thirdparty/es5-sham.min.js"></script>
     <script src="./shared/thirdparty/console-polyfill.js"></script>
     <script src="./build/react.js"></script>
+    <script src="./build/react-dom.js"></script>
     <script src="../../build/JSXTransformer.js"></script>
     <script type="text/jsx">
       /**
@@ -49,22 +48,21 @@ src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js">
       });
       var ListComponent = React.createClass({
         render: function() {
-          var containerTag = this.props.containerTag;
+          var containerTag = this.props.containerTag.toString();
           var data = this.props.data;
           var message = "List contains " + data.length + " elements";
-          return (
-            <div>
-              {data.map(function(dataUnit){
-                return React.createElement(dataUnit.klass,
+          return React.createElement(containerTag, {},
+              data.map(function(dataUnit){
+                return React.createElement(dataUnit.klass, 
                   {data: dataUnit.value});
-              })}
-            </div>
-            );
+              })
+          );
         }
       });
+      var ListComponentFactory = React.createFactory(ListComponent);
       setInterval(function() {
-        React.renderComponent(
-          ListComponent({containerTag: 'div', data: [{klass: Comment, value:5},
+        ReactDOM.render(
+          ListComponentFactory({containerTag: 'div', data: [{klass: Comment, value:5},
             {klass: Comment, value:4}, {klass: Comment, value:"**bold** move"},
             {klass: Comment, value:3}, {klass: Comment, value:6}]}),
           document.getElementById('list')
