--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <title>List Component</title>
-    <link rel="stylesheet" href="../shared/css/base.css" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <h1>List Component</h1>
     <div id="list">
-      <p>
-        If you can see this, the app is not working right.
-      </p>
     </div>
     <script
 src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
