--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>List Component</h1>
     <div id="list">
     </div>
+    <div id="content">
+    </div>
     <script
 src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
